# aurora-tools

./: .gitignore  claude.md  index.html  package-lock.json  package.json
.claude/: foza-statusline.sh  settings.json
python/: X upload.py
python/Parame storage/: CoreLogic.py  Downloader.py  Interface.py  Main mau.py  Processor_Facebook.py  Processor_Line.py  Processor_Twitter.py  Upload.py  config.py  dowload.py  run_cli.py  total.py  utils.py
scripts/: build-launcher.cjs  release.cjs
src/: App - gốc.tsx  App.tsx  supabaseClient.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/launcher/: launcher.nsi
src-tauri/src/: lib.rs  main.rs
src/components/: AdminUserTab.tsx  AuthScreen.tsx  CommandPalette.tsx  ConsultingCustomScreen.tsx  DashboardTab - Copy.tsx  DashboardTab.tsx  HimozukeCustomScreen.tsx  KiwamiCustomScreen.tsx  NotesTab.tsx  ParameCustomScreen.tsx  SeleniumCustomScreen.tsx  SettingsTab.tsx  SharedDetailScreen.tsx  SlackTab.tsx  TWCustomScreen.tsx  TasksTab.tsx  UserTab.tsx  XCustomScreen.tsx  XSuiteCustomScreen.tsx  XUploadCustomScreen.tsx
supabase/: config.toml
supabase/functions/slack-webhook/: index.ts
